--- a/resources/Settings/settings.ui
+++ b/resources/Settings/settings.ui
@@ -34,7 +34,11 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QSpinBox" name="framerate_spin"/>
+       <widget class="QSpinBox" name="framerate_spin">
+        <property name="maximum">
+         <number>1600</number>
+        </property>
+       </widget>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="gsf_lbl">
