--- a/resources/Settings/settings.ui
+++ b/resources/Settings/settings.ui
@@ -23,6 +23,9 @@
       <property name="rowWrapPolicy">
        <enum>QFormLayout::WrapLongRows</enum>
       </property>
+      <property name="leftMargin">
+       <number>12</number>
+      </property>
       <property name="topMargin">
        <number>20</number>
       </property>
