--- a/gameplay/highway_menu/select_level_menu.ui
+++ b/gameplay/highway_menu/select_level_menu.ui
@@ -63,6 +63,9 @@
           <property name="checked">
            <bool>true</bool>
           </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
@@ -70,6 +73,9 @@
           <property name="text">
            <string>NORMAL</string>
           </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
@@ -77,6 +83,9 @@
           <property name="text">
            <string>HARD</string>
           </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
          </widget>
         </item>
         <item>
