--- a/gameplay/highway_menu/select_level_menu.ui
+++ b/gameplay/highway_menu/select_level_menu.ui
@@ -6,26 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>233</width>
+    <width>232</width>
     <height>152</height>
    </rect>
   </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-    <horstretch>0</horstretch>
-    <verstretch>0</verstretch>
+    <horstretch>232</horstretch>
+    <verstretch>152</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>0</width>
-    <height>0</height>
+    <width>232</width>
+    <height>152</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>300</width>
-    <height>200</height>
+    <width>232</width>
+    <height>152</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -114,12 +114,18 @@
      </rect>
     </property>
     <property name="sizePolicy">
-     <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
       <horstretch>101</horstretch>
       <verstretch>31</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
+     <size>
+      <width>101</width>
+      <height>31</height>
+     </size>
+    </property>
+    <property name="maximumSize">
      <size>
       <width>101</width>
       <height>31</height>
